Creacion de test controller post para customer